deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todoapp
  name: deployment-todoapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-todoapp
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-todoapp
    spec:
      containers:
      - image: yashgangwar123/todo-app-efk:latest
        imagePullPolicy: Always
        name: todoapp
        ports:
        - containerPort: 3000
