service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todoapp
  name: service-todoapp
spec:
  ports:
    - port: 80
      targetPort: 4499
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-todoapp
